--- a/updates.html
+++ b/updates.html
@@ -5,7 +5,7 @@ Add nav bar to the footer ( improve footer)
 -->
 
 <html>
-<title>Goals - Shipping</title> <!-- title, displayed in tab-->
+<title>Goals - Premium Incentive</title> <!-- title, displayed in tab-->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -64,59 +64,22 @@ Add nav bar to the footer ( improve footer)
 	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
 	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
 </div>
-
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
 <!-- INformation Section -->
 <div class="w3-row-padding w3-padding-64 w3-container">
 	<div class="w3-container">
-	  <div class="w3-twothird">
-		<h1>Shipping Infomation</h1>
-		<h5 class="w3-padding-32">
-			We will only ship in reinforced corrugated tube. We will NOT ship flat.
-Shipping flat only increases the chance of damage to the print. On the outside of the tube are handling and framing instructions. This also decreases the cost of shipping.
-Shipping costs: $25.00 us, anywhere in North American.
-Outside of North America: Please use the Contact Seller icon on the ebay page to receive an accurate shipping quote.
-If you are ordering two lithographs, ie. one Richard and one Beliveau they will be shipped separately to minimize any chance of damage. You will only be charged one shipping charge.
 
-		</h5>
+		<h1>Coming Soon </h1>
+		
 	  </div>
-  <!-- .w3-col.m5 is for spacing-->
-		 <div class=".w3-col.m5 w3-center w3-padding-64">
-		<img src=".\pics\poster_tube.jpg" style="width:150px;height:280px;">
 	  </div>
-	</div>
-  </div>
+
+
 
   
 
-	
-<br>
-
-<!-- INformation Section for ordering -->
-
-<div class="w3-row-padding w3-padding-64 w3-container">
-	<div class="w3-content">
-	  <div class="w3-twothird">
-		<h1 class="w3-border-bottom w3-border-light-grey">How to order</h1>
-		<hp class="w3-padding-32">
-			<ol>
-				<li>Choose the Lithograph you would like to order. </li>
-				<li>Choose the Number of the lithograph you would like. ( from under the picture)</li>
-				<li>Click on the Ebay icon (This will take you to my ebay site. This allows you to have the Ebay purchase guarantee??)ll</li>
-				<li>Just fill in your lithograph and number chosen, adding the price.</li>
-				<li>Please read the shipping procedures under the shipping tab.
-					Note: if you are ordering two prints, 1 Richard and 1 Beliveau, please read the information under the Shipping tab.</li>
-				<li>Place your order</li>
-			  </ol>
-		</hp>
-	  </div>
- 
-	</div>
-  </div>
-
-</div>
 
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
@@ -126,7 +89,7 @@ If you are ordering two lithographs, ie. one Richard and one Beliveau they will 
 			
 			  <div class="w3-left w3-hide-small">
 				<a href="#about" class="w3-bar-item-foot w3-button ">Pricing</a>  
-				<a href="#about" class="w3-bar-item-foot w3-button ">FAQ</a>
+				<a href="#about" class="w3-bar-item-foot w3-button ">Return Policy</a>
 				<a href="#about" class="w3-bar-item-foot w3-button ">Contact Us</a>
 	
 		</div>
