--- a/About_the_Artists.html
+++ b/About_the_Artists.html
@@ -2,56 +2,31 @@
 <title>Goals Inc</title> <!-- title, displayed in tab-->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="stylesheet" href="w3.css">
 <link rel="stylesheet" href="w3-theme-blue.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+<style>
+	h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+	body{font-family: "Lato", sans-serif; font-size: 14px;}
+.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+</style>
 <body>
 
-<!-- Side Navigation (hamburger) 
-<nav class="w3-sidebar w3-bar-block w3-card w3-animate-left w3-center" style="display:none" id="mySidebar">
-  <h1 class="w3-xxxlarge w3-text-theme"><b>My Pages</b></h1>
-  <a href="https://www.linkedin.com/in/adnaz/" class="w3-bar-item w3-button">LinkedIn Profile</a>
-  <a href="https://github.com/anazareth" class="w3-bar-item w3-button">GitHub Respositories</a>
-  <a href="https://public.tableau.com/profile/alex.nazareth#!/" class="w3-bar-item w3-button">Tableau Public</a>
-  <button class="w3-bar-item w3-button" onclick="w3_close()">Close<i class="fa fa-remove"></i></button>
-</nav>
--->
 
-<!-- Header -->
-
-
-<!-- New Header 
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-	<img class="w3-image" src=".\pics\rocket_crop.jpg" alt="Architecture" width="1500px" height="400px">
-	<div class="w3-display-middle w3-margin-top w3-center">
-	  <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>About Us </b></span> <span class="w3-hide-small w3-text-light-grey"></span></h1>
-	</div>
-  </header>
-  -->
-  
-<header class="w3-container w3-padding" style="margin-top: 7%;">
- 
-  <div class="w3-center" style="font-size: 60pt;">
-  <h1> <u>About Goals</u></h1>
- 
-    <div class="w3-padding-32">
-    </div>
-  </div>
-  <p class="center">Commemorative Goals is dedicated to bringing you, the collector and investor, 
-    the highest quality limited edition fine art reproductions personally signed by the artist and athlete.
-  </p>
-</header>
-  
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
 	<div class="w3-bar w3-white w3-wide w3-padding w3-card">
-	<a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-	  <a href=".\main.html" class="w3-bar-item w3-button "><i class="fa fa-home w3-margin-right"></i>Goals</a>
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large" 
+		href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a> 
+  <a href=".\index.html" class="w3-bar-item w3-button "><i class="fa fa-home w3-margin-right"></i>Goals</a>
 	  <!-- Float links to the right. Hide them on small screens -->
 	  <div class="w3-right w3-hide-small">
-		<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
+		
 		<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals</a>
 
 		<div class="w3-dropdown-hover">		
@@ -60,11 +35,12 @@
 				<a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
 				<a href=".\jean_beliveau.html" class="w3-bar-item w3-button ">Jean Beliveau</a>
 			</div>	
-		</div>	
+    </div>	
+    <a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
 		<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
 		<a href=".\shipping.html" class="w3-bar-item w3-button  ">Shipping</a>
 		<a href=".\premium.html" class="w3-bar-item w3-button ">Premium Incentive</a>
-		<a href="#about" class=" w3-button w3-bar-item " >Updates</a>
+		<a href=".\updates.html" class=" w3-button w3-bar-item " >Updates</a>
 
 	  </div>
 	</div>
@@ -72,16 +48,32 @@
 
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top">
+<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-padding-64 w3-hide-large w3-hide-medium w3-large">
 	<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
 	<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
 	<a href=".\rocket.html" class="w3-bar-item w3-button w3-padding-large ">The Rocket Richard</a>
 	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button w3-padding-large ">Jean Beliveau</a>
 	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
-  <a href="#.\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
-	<a href="#.\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
-	<a href="#about" class=" w3-button w3-bar-item" >Updates</a>
+	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
+	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
+	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
 </div>
+
+  
+<header class="w3-container w3-padding" style="margin-top: 7%;">
+ 
+  <div class="w3-center" style="font-size: 60pt;">
+  <h1> <u>About Goals</u></h1>
+ 
+    <div class="w3-padding-16">
+    </div>
+  </div>
+  <p class="center">Commemorative Goals is dedicated to bringing you, the collector and investor, 
+    the highest quality limited edition fine art reproductions personally signed by the artist and athlete.
+  </p>
+</header>
+  
+
 
 
 <div class="container m6 w3-padding-large w3-hide-small">
@@ -143,7 +135,7 @@
       
         <div class="w3-left w3-hide-small">
         <a href="#about" class="w3-bar-item-foot w3-button ">Pricing</a>  
-        <a href="#about" class="w3-bar-item-foot w3-button ">Return Policy</a>
+        <a href="#about" class="w3-bar-item-foot w3-button ">FAQ</a>
         <a href="#about" class="w3-bar-item-foot w3-button ">Contact Us</a>
   
     </div>
