--- a/buying_form.html
+++ b/buying_form.html
@@ -11,19 +11,28 @@ Add nav bar to the footer ( improve footer)
 
 <link rel="stylesheet" href="w3.css">
 <link rel="stylesheet" href="w3-theme-blue.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+<style>
+	h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+	body{font-family: "Lato", sans-serif; font-size: 14px;}
+.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+</style>
 <body>
+
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
 	<div class="w3-bar w3-white w3-wide w3-padding w3-card">
-	<a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-	  <a href=".\main.html" class="w3-bar-item w3-button "><i class="fa fa-home w3-margin-right"></i>Goals</a>
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large" 
+		href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a> 
+  <a href=".\index.html" class="w3-bar-item w3-button "><i class="fa fa-home w3-margin-right"></i>Goals</a>
 	  <!-- Float links to the right. Hide them on small screens -->
 	  <div class="w3-right w3-hide-small">
-		<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
+		
 		<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals</a>
 
 		<div class="w3-dropdown-hover">		
@@ -32,11 +41,12 @@ Add nav bar to the footer ( improve footer)
 				<a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
 				<a href=".\jean_beliveau.html" class="w3-bar-item w3-button ">Jean Beliveau</a>
 			</div>	
-		</div>	
+    </div>	
+    <a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
 		<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
 		<a href=".\shipping.html" class="w3-bar-item w3-button  ">Shipping</a>
-		<a href="#premmium Incentive" class="w3-bar-item w3-button ">Premium Incentive</a>
-		<a href="#about" class=" w3-button w3-bar-item " >Updates</a>
+		<a href=".\premium.html" class="w3-bar-item w3-button ">Premium Incentive</a>
+		<a href=".\updates.html" class=" w3-button w3-bar-item " >Updates</a>
 
 	  </div>
 	</div>
@@ -44,16 +54,17 @@ Add nav bar to the footer ( improve footer)
 
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top">
+<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-padding-64 w3-hide-large w3-hide-medium w3-large">
 	<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
 	<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
 	<a href=".\rocket.html" class="w3-bar-item w3-button w3-padding-large ">The Rocket Richard</a>
 	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button w3-padding-large ">Jean Beliveau</a>
 	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
-	<a href="#Shipping" class="w3-bar-item w3-button ">Shipping</a>
-	<a href="#premmium Incentive" class="w3-bar-item w3-button">Premium Incentive</a>
-	<a href="#about" class=" w3-button w3-bar-item" >Updates</a>
+	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
+	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
+	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
 </div>
+
 
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
