--- a/About_the_Artists.html
+++ b/About_the_Artists.html
@@ -48,45 +48,42 @@
 
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-padding-64 w3-hide-large w3-hide-medium w3-large">
-	<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
-	<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
-	<a href=".\rocket.html" class="w3-bar-item w3-button w3-padding-large ">The Rocket Richard</a>
-	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button w3-padding-large ">Jean Beliveau</a>
-	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
-	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
-	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
-	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
-</div>
+  <div id="navDemo" class="small-bar w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
+    <a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
+    <a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
+    <a href=".\jean_beliveau.html" class="w3-bar-item w3-button  ">Jean Beliveau</a>
+    <a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
+    <a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
+    <a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
+    <a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
+  </div>
 
   
-<header class="w3-container w3-padding" style="margin-top: 7%;">
+<header class="w3-container w3-padding-16" style="margin-top: 7%;">
  
   <div class="w3-center" style="font-size: 60pt;">
-  <h1> <u>About Goals</u></h1>
+  <h1> <b><u>About Goals</u></b></h1>
  
     <div class="w3-padding-16">
     </div>
   </div>
-  <p class="center">Commemorative Goals is dedicated to bringing you, the collector and investor, 
+  <h3 class="center">Commemorative Goals is dedicated to bringing you, the collector and investor, 
     the highest quality limited edition fine art reproductions personally signed by the artist and athlete.
-  </p>
+  </h3>
 </header>
   
 
 
-
-<div class="container m6 w3-padding-large w3-hide-small">
+<div class="w3-content">
+<div class="container w3-padding-large w3-hide-small">
   <img src=".\pics\rocket_bw.jpg" class="w3-round w3-center w3-image w3-opacity-min" alt="Table Setting" width="70%">
 </div>
-<div class="container m6 w3-padding-large w3-hide-small">
-  <h6 class="w3-medium w3-text-white"> Commemorative Goals is dedicated to bringing the collector and investor, 
-    the highest quality  limited edition fine art lithographs, personally signed by the artist and athlete.</h6>
-</div>
+
 
 <hr id="about">
 <!-- Page content -->
-<div class="w3-content" style="max-width:1100px">
+<div class="w3-content" >
 
     <!-- About Section -->
     <div class="w3-row w3-padding-64" id="about">
@@ -95,9 +92,9 @@
       </div>
   
       <div class="w3-col m6 w3-padding-large">
-        <h1 class="w3-center"><u>About the Artist</u></h1><br>
-        <h5 class="w3-center">Richard John Carter  </h5>
-        <p class="w3-large">After establishing himself as a top commercial illustrator, 
+        <h1 class="w3-center"><u><b>About the Artist</b></u></h1><br>
+        <h5 class="w3-center"> <i>Richard John Carter</i> </h5>
+        <p class="w3-large">After establishing himself as a top commercial illustrator 
           Richard is now able to devote more of his time and considerable talent to fine art. 
           The commission to paint “Rocket Richard” was the perfect opportunity to combine his two great loves, hockey and art.
           </p>
@@ -109,19 +106,21 @@
     <hr id="about">
  <!-- About Section -->
  <div class="w3-container w3-padding-32 w3-center">  
-  <h1>About Commemorative Goals</h1><br>
-  <img src=".\pics\jean_signing.jpg" alt="Me" class="w3-image" style="display:block;margin:auto" width="800" height="533">
+  <h1><u><b>About Commemorative Goals</b></u></h1>
   <div class="w3-padding-32">
     <h4><b>High quality Litographs signed and certifed</b></h4>
-    <h6><i>Commemorative Goals started 20 years ago with a passion for hockey and memoberial collection. </i></h6>
-    <p>Additional text about Commemorative goals for input</p>
+    <h6><i>Commemorative Goals has a passion for hockey and memorabilia collection. </i></h6>
+ 
   </div>
-</div>
+  <img src=".\pics\jean_signing.jpg" alt="Me" class="w3-image" style="display:block;margin:auto" width="800" height="533">
+  <h5>Mr. Beliveau signing the orginal art.</h5>
 
 </div>
 
+</div>
 
 
+</div>
 
 
 
