--- a/buying_form.html
+++ b/buying_form.html
@@ -54,11 +54,11 @@ Add nav bar to the footer ( improve footer)
 
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-padding-64 w3-hide-large w3-hide-medium w3-large">
+  <div id="navDemo" class="small-bar w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
 	<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
 	<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
-	<a href=".\rocket.html" class="w3-bar-item w3-button w3-padding-large ">The Rocket Richard</a>
-	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button w3-padding-large ">Jean Beliveau</a>
+	<a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
+	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button  ">Jean Beliveau</a>
 	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
 	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
 	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
