--- a/rocket.html
+++ b/rocket.html
@@ -47,16 +47,16 @@
 
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-padding-64 w3-hide-large w3-hide-medium w3-large">
-	<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
-	<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
-	<a href=".\rocket.html" class="w3-bar-item w3-button w3-padding-large ">The Rocket Richard</a>
-	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button w3-padding-large ">Jean Beliveau</a>
-	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
-	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
-	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
-	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
-</div>
+  <div id="navDemo" class="small-bar w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
+    <a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
+    <a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
+    <a href=".\jean_beliveau.html" class="w3-bar-item w3-button  ">Jean Beliveau</a>
+    <a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
+    <a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
+    <a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
+    <a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
+  </div>
 
 
 
@@ -70,7 +70,7 @@
       <div id="CUST_1">
         <div id="myDiv">
 
-        <div onclick="showDescription('blurb')" id="num_cust1">
+        <div onclick="showDescription('blurb')" id="num_cust1">click
             <div id="blurb">Maurice “The Rocket” Richard
               <ul>
                   <li>Inducted into Hockey Hall of Fame, 1961 (one year after retirement)</li>
@@ -81,14 +81,14 @@
             </div>
         </div> <!-- Ref CSS for loaction and style-->
 
-        <div onclick="showDescription('blurb1')" id="num_cust2">
+        <div onclick="showDescription('blurb1')" id="num_cust2">click
             <div id="blurb1">Each fine print is produced on museum quality acid free paper, 
               ensuring the highest standard of original art reproduction. 
               This guarantees each limited edition lithograph will stand the test of time and 
               increased value for the investor.</div>
         </div> <!-- Ref CSS for loaction and style-->
 
-        <div onclick="showDescription('blurb2')" id="num_cust3">
+        <div onclick="showDescription('blurb2')" id="num_cust3">click
           <div id="blurb2">
             Maurice “The Rocket” Richard
             <ul>
@@ -100,26 +100,26 @@
             </div>
         </div> <!-- Ref CSS for loaction and style-->
 
-        <div onclick="showDescription('blurb3')" id="num_cust4">
+        <div onclick="showDescription('blurb3')" id="num_cust4">click
           <div id="blurb3">Each Lithograph represents One of the 626 goals scored by “The Rocket”</div>
         </div> <!-- Ref CSS for loaction and style-->
 
-        <div onclick="showDescription('blurb4')" id="num_cust5">
+        <div onclick="showDescription('blurb4')" id="num_cust5">click
           <div id="blurb4">“PSA” Authentication and Guarantee of Signature 
-            (“PSA” DNA is the leader in signature authentication)
+            (PSA/DNA is the leader in signature authentication)
           </div>
         </div> <!-- Ref CSS for loaction and style-->
 
-        <div onclick="showDescription('blurb5')" id="num_cust6">
-          <div id="blurb5">Signed and Numbered by Richard Carter ( the “artist”)</div>
+        <div onclick="showDescription('blurb5')" id="num_cust6">click
+          <div id="blurb5">Signed and Numbered by Richard Carter (The “artist”)</div>
         </div> <!-- Ref CSS for loaction and style-->
 
-        <div onclick="showDescription('blurb6')" id="num_cust7">
-          <div id="blurb6">signed by Maurice Richard and drop by his signature</div>
+        <div onclick="showDescription('blurb6')" id="num_cust7">click
+          <div id="blurb6">Signed by Maurice Richard</div>
         </div> <!-- Ref CSS for loaction and style-->
 
-        <div onclick="showDescription('blurb7')" id="num_cust8">
-          <div id="blurb7">Actual size 18 x 30 inches</div>
+        <div onclick="showDescription('blurb7')" id="num_cust8">click
+          <div id="blurb7">Actual size 26 x 20 inches</div>
         </div> <!-- Ref CSS for loaction and style-->
 
           <area shape="rect" coords="0,0,1580,1460" id=""/> <!-- total picture area hover-->
@@ -154,31 +154,36 @@
     
 
 <!-- INformation Section -->
-<div class="w3-container" style="margin-top: 10%;">
-  <div class="w3-row-padding w3-padding-64 w3-container">
-    <div class="w3-content">
-      <div class="w3-twothird">
-      <h1>Maurice "The Rocket" Richard</h1>
-      <h5 class="w3-padding-32">
-        Edition Size: 544 Signed & Numbered. <br>
-        82 Playoff Goals-signed and numbered <br>
-        626 Total  Goals- one print for each NHL  goal scored <br>
-        63 Artist Proofs-signed and numbered <br>
+
+<div class="w3-row-padding w3-padding w3-container w3-light-grey">
+	<div class="w3-content">
+	  <div class="w3-twothird ">
+		<h1 class="w3-border-bottom w3-border-white">Maurice "The Rocket" Richard</h1>
+    <h5 class="w3-padding-32">
+      Edition Size: 626 Signed & Numbered. <br>
+      Career Goals: 544 Signed & Numbered <br>
+      Playoff Goals: 82 Signed & Numbered <br>
+      Total: 626 <br>
+      63 Artist Proofs-signed and numbered <br>
 
 
-        An outstanding lithograph, showcasing the “The Rocket” in three images. The NHL’s first 50 goal scorer.
+      An outstanding lithograph, showcasing the “The Rocket” in three images. <br>
+      The NHL’s first 50 goal scorer.
 
-      </h5>
-      </div>
-    <!-- .w3-col.m5 is for spacing-->
-      <div class=".w3-col.m5 w3-center w3-padding-64" >
-        <img src=".\pics\rocket_signing2.jpeg" alt="Rocket sgining" style="width:300px;height:200px;">
-     
-      </div>
+    </h5>
+	  </div>
+  <!-- .w3-col.m5 is for spacing-->
+    <div class=".w3-col.m5 w3-center w3-padding-64" >
+      <img src=".\pics\rocket_signing2.jpeg" alt="Rocket sgining" style="width:400px;height:300px;">
+      <p class=".w3-col.m5">Mr. Richard signing the litographs.</p>
     </div>
-    </div>
-</div>  
+  
 
+</div>
+  
+  </div>
+
+</div>
   
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
