--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@ Add nav bar to the footer ( improve footer)
 
 <style>
 	h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+
 	body{font-family: "Lato", sans-serif; font-size: 14px;}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+.bgimg {
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+.bgimg {background-image: url("pics/rocket_crop.jpg")}
+
 </style>
 <body>
 
@@ -54,11 +62,11 @@ Add nav bar to the footer ( improve footer)
 
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-padding-64 w3-hide-large w3-hide-medium w3-large">
+<div id="navDemo" class="small-bar w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
 	<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
 	<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
-	<a href=".\rocket.html" class="w3-bar-item w3-button w3-padding-large ">The Rocket Richard</a>
-	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button w3-padding-large ">Jean Beliveau</a>
+	<a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
+	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button  ">Jean Beliveau</a>
 	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
 	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
 	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
@@ -67,28 +75,27 @@ Add nav bar to the footer ( improve footer)
 
 <!-- Header -->
 
-  <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-	<img class="w3-image" src=".\pics\rocket_crop.jpg" alt="Rocket Cropped" width="1500px" height="400px">
-
+  <header class="w3-display-container w3-wide bgimg" id="home">
+	
 	<div class="w3-display-middle w3-center" style="margin-top: 8%;">
 		
-	  <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Commemorative</b></span>  <span class="w3-hide-small w3-text-light-grey">Goals</span></h1>
-	  <h3> <b>The ultimate edition for the ultimate fan</b> </h3>
+	  <h1 class="w3-text-white" style="font-size:3vw;"><span class="w3-padding w3-black w3-opacity-min"><b>Commemorative</b></span>  <span class="w3-padding w3-text-light-grey">Goals</span> </h1>
+	  <h3 style="font-size:1.5vw;"> <b> <i>The ultimate edition for the ultimate fan</i></b> </h3>
 	</div>
 </header>
 
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:1564px">
+<div class="w3-content">
 
 	<!-- INformation Section -->
 
 <div class="w3-row-padding w3-padding-32 w3-container">
 	<div class="w3-content">
 	  <div class="w3-twothird">
-		<h1 class="w3-border-bottom w3-border-light-grey">SIGNED LIMITED EDITION LITHOGRAPH</h1>
+		<h1 class="w3-border-bottom w3-border-light-grey">SIGNED LIMITED EDITION LITHOGRAPHS</h1>
 		<h5 class="w3-padding-32">
-			Commemorative Goals is dedicated to bringing <span class="w3-tag w3-light-grey">you</span>, the collector and investor, 
+			Commemorative Goals is dedicated to bringing you, the collector and investor, 
 			the highest quality limited edition fine art reproductions personally signed by the artist and athlete.
 		</h5>
 	  </div>
@@ -109,7 +116,7 @@ Add nav bar to the footer ( improve footer)
 		  <div class="w3-twothird">
 			<h1 class="w3-border-bottom w3-border-white">HAND SIGNED LITHOGRAPHS</h1>
 			<h5 class="w3-padding-32">
-				Each print has been invildualed signed by the player 
+				Each print has been individually signed by the star. 
 			</h5>
 		  </div>
 	  <!-- .w3-col.m5 is for spacing-->
@@ -129,8 +136,8 @@ Add nav bar to the footer ( improve footer)
 			<h1 class="w3-border-bottom w3-border-light-grey">THE GOALS NUMBERING SYSTEM</h1>
 			<h5 class="w3-padding-32">
 				Maurice Richard scored 544 career goals and 82 playoff goals during his NHL career. Commemorative Goals is offering one signed print for each goal scored. 
-				Therefore, each print is unique and represents one of his 626 NHL goals. All prints, in this series, have been <span class="w3-tag w3-light-grey">autograph authenticated by PSA.</span>   
-				“The leader in third party signature verification”.  In addition, there are 63 signed artist proofs.
+				Therefore, each print is unique and represents one of his 626 NHL goals. All prints, in this series, have been <b> autograph authenticated by PSA.</b>   
+				“The leader in third party signature verification”.  In addition there are 63 signed artist proofs.
 			</h5>
 		  </div>
 	  <!-- .w3-col.m5 is for spacing-->
@@ -149,11 +156,11 @@ Add nav bar to the footer ( improve footer)
 <div class="w3-row-padding w3-padding w3-container w3-light-grey">
 	<div class="w3-content">
 	  <div class="w3-twothird ">
-		<h1 class="w3-border-bottom w3-border-white">PSA Certified</h1>
+		<h1 class="w3-border-bottom w3-border-white">PSA/DNA Certified</h1>
 		<h5 class="w3-padding-32">
-			All lithographs aliavble for purchase have been <span class="w3-tag w3-light-grey">PSA Certifed</span> and come with a certifcation card, 
+			All lithographs available for purchase have been <b>PSA Certifed</b> and come with a certifcation card, 
 			matching the PSA decal on the print. This authenticity can be confirmed by using the PSA/DNA 
-			<a href="https://www.psacard.com/cert/">Certification Verification Tool</a>
+			<a href="https://www.psacard.com/cert/">Certification Verification Tool.</a>
 		</h5>
 	  </div>
   <!-- .w3-col.m5 is for spacing-->
@@ -171,7 +178,7 @@ Add nav bar to the footer ( improve footer)
 <hr></hr>
 <div class="w3-white w3-row-padding ">    
 	  <h1 class="w3-wide w3-center">Products</h1>
-	  <p class="w3-center"> <span class="w3-tag w3-light-grey"> <b> Commemorative Goals is currently offering two premium signed 
+	  <p class="w3-center w3-large"> <span class="w3-tag w3-light-grey"> <b> Commemorative Goals is currently offering two premium signed 
 		  lithographs, Maurice Richard and Jean Beliveau sizing for each print ( 26”x 20”) </b> </span> 
 		
 	</p>
