--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -47,16 +47,16 @@
 
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-padding-64 w3-hide-large w3-hide-medium w3-large">
-	<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
-	<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
-	<a href=".\rocket.html" class="w3-bar-item w3-button w3-padding-large ">The Rocket Richard</a>
-	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button w3-padding-large ">Jean Beliveau</a>
-	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
-	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
-	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
-	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
-</div>
+  <div id="navDemo" class="small-bar w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
+    <a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
+    <a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
+    <a href=".\jean_beliveau.html" class="w3-bar-item w3-button  ">Jean Beliveau</a>
+    <a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
+    <a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
+    <a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
+    <a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
+  </div>
 
 <!-- Photo Grid (maybe instead of slideshow) -->
 <div class="w3-center  w3-padding-16" style="margin-top: 10%;">
@@ -92,7 +92,7 @@
     <div class="w3-half">
       <img src=".\pics\rocket_signing.jpeg" alt="Rocket sgining" style="width:100%">
       <h3>Rocket Richard signing</h3>
-      <p>Maurice Richard signing the original oil painting <br> by R. Carter</p>
+      <p>Maurice Richard signing the lithographs <br> by R. Carter</p>
     </div>
 
     <div class="w3-half">
@@ -108,14 +108,14 @@
 <div class="w3-row-padding w3-padding-16 w3-center" id="Row_2">
   <div class="w3-half">
     <img src=".\pics\rocket_signing2.jpeg" alt="Rocket sgining" style="width:100%">
-    <h3>Rocket Richard signing</h3>
-    <p>Maurice Richard signing the original oil painting <br> by R. Carter</p>
+    <h3>Maurice Richard signing</h3>
+    <p>Maurice Richard signing the lithographs<br> by R. Carter</p>
   </div>
 
     <div class="w3-half">
       <img src=".\pics\rocket_mom.jpeg" alt="Jean sgining" style="width:100%">
-      <h3>Jean Beliveau sgining</h3>
-      <p>Jean Beliveau signing the original oil painting <br> by R. Carter</p>
+      <h3>Maurice Richard</h3>
+      <p>Maurice Richard posing with a fan </p>
     </div>
 
  
@@ -126,14 +126,14 @@
 <div class="w3-row-padding w3-padding-16 w3-center" id="Row_2">
   <div class="w3-half">
     <img src=".\pics\rocket_group.jpeg" alt="Rocket sgining" style="width:100%">
-    <h3>Rocket Richard signing</h3>
-    <p>Maurice Richard signing the original oil painting <br> by R. Carter</p>
+    <h3>Maurice Richard signing</h3>
+    <p>Maurice Richard signing the lithographs<br> by R. Carter</p>
   </div>
 
     <div class="w3-half">
       <img src=".\pics\rocket_sgining_close.jpeg" alt="Jean sgining" style="width:100%">
-      <h3>Jean Beliveau sgining</h3>
-      <p>Jean Beliveau signing the original oil painting <br> by R. Carter</p>
+      <h3>Maurice Richard signing</h3>
+      <p>Maurice Richard signing the lithographs<br> by R. Carter</p>
     </div>
 
  
@@ -144,13 +144,13 @@
 <div class="w3-row-padding w3-padding-16 w3-center" id="Row_3">
     <div class="w3-half">
       <img src=".\pics\psa_card_removed.jpg" alt="Rocket sgining" style="width:100%">
-      <h3>PSA certificate of authenticity</h3>
+      <h3>PSA/DNA certificate of authenticity</h3>
       <p>PSA/DNA is the leader in third party signature authentication </p>
     </div>
 
     <div class="w3-half">
       <img src=".\pics\psa_sticker.jpg" alt="Jean sgining" style="width:100%">
-      <h3>PSA certificate sticker</h3>
+      <h3>PSA/DNA certificate sticker</h3>
       <p>PSA/DNA is the leader in third party signature authentication</p>
     </div>
 </div>
@@ -160,14 +160,14 @@
 <div class="w3-row-padding w3-padding-16 w3-center" id="Row_3">
     <div class="w3-half">
       <img src=".\pics\psa_sticker_close.jpg" alt="Rocket sgining" style="width:100%">
-      <h3>PSA certificate sticker</h3>
+      <h3>PSA/DNA certificate sticker</h3>
       <p>Remaining digits of certification code have been removed for privacy</p>
     </div>
 
     <div class="w3-half">
-      <img src=".\pics\poster_tube.jpg" width="70px" height="700px" alt="Jean sgining" style="width:70%">
-      <h3>Lithograph shipping tube</h3>
-      <p>The customer will recivce a tube with the litograph inside. <br> Shipping with the tube is to ensure protection for the product</p>
+      <img src=".\pics\jean_beliveau_sign.jpeg" alt="Jean sgining" style="width:100%">
+      <h3>Jean Beliveau</h3>
+      <p>Jean Beliveau signing</p>
     </div>
 
   
@@ -177,7 +177,7 @@
 
 <div class="w3-row-padding w3-padding-16 w3-center" id="Row_3">
     <img src=".\pics\jean_bottom.jpg" alt="Rocket sgining" style="width:100%">
-    <h3>Jean Beliveau Lithograph close up</h3>
+    <h3>Jean Beliveau Lithograph Bottom</h3>
     <p>Career goal numbering</p>
   </div>
 
@@ -185,7 +185,7 @@
 
 <div class="w3-row-padding w3-padding-16 w3-center" id="Row_3">
     <img src=".\pics\rocket_bottom.jpg" alt="Rocket sgining" style="width:100%">
-    <h3>Maurice Richard Lithograph close up</h3>
+    <h3>Maurice Richard Lithograph Bottom</h3>
     <p>Career goal numbering</p>
   </div>
 
