--- a/price.html
+++ b/price.html
@@ -74,13 +74,13 @@ Add nav bar to the footer ( improve footer)
 	  <div class="w3-twothird">
 		<h1>Pricing and Ordering</h1>
 		<h5 class="w3-padding-32">
-			In this inaugural issue of PSA/DNA prints, there are a total of 78 prints available. <br>
-			All purchases are done through ebay.
+			In this inaugural issue of PSA/DNA prints, there are a total of 80 prints available. <br>
+			All purchases are done through <img src=".\pics\ebay.png" style="height: 50px; width: 100px;">
 		</h5>
 	  </div>
   <!-- .w3-col.m5 is for spacing-->
 		 <div class=".w3-col.m5 w3-center w3-padding-64">
-		<img src=".\pics\psa_card_removed.jpg" style="width:250px;height:280px;">
+			<a href="https://www.ebay.com" class="text-1" > Buy Now </a>
 	  </div>
 	</div>
   </div>
@@ -92,22 +92,25 @@ Add nav bar to the footer ( improve footer)
 	<div class="column"> 
 <div class="w3-row-padding w3-center w3-margin-top"> -->
 
-	<div class="container w3-padding-16">
+	<div class="centered">
+		<div class="cards w3-padding-32">
 
 		
-	<div class="w3-card" style="max-width:30%;">
-		<h3 class="w3-center"> The Rocket Richard </h3>   
+	<div class="w3-card card-3 w3-padding-16">
+		<h3 class="w3-center"> The Rocket Richard - Career </h3>   
 		<div class="container-fade">
 			<img src=".\pics\rocket.jpg" alt="Rocket" class="image-fade" style="width:100%">
 			<div class="middle-fade">
-			  <a href=".\buying_form.html" class="text"> Buy Now </a>
+			  <a href="https://www.ebay.com" class="text"> Buy Now </a>
 			</div>
-		  </div>	
+		</div>	
 		
 			   <h1 class="w3-center"> 899 USD</h1> 
-			   <p class="w3-center"> 50 Prints available with PSA/DNA</p>
-			  
-		
+			   <p class="w3-center"> 40 Prints available with PSA/DNA</p>
+			   <a href=".\buying_form.html">
+			   <button style="width: 90%; margin-left: 5%;">Number Selection</button>
+			   </a>
+			   
 	</div>
 	
 	
@@ -117,17 +120,20 @@ Add nav bar to the footer ( improve footer)
 	<div class="w3-row-padding w3-center w3-margin-top"> -->
 	
 		
-	<div class="w3-card" style="max-width: 30%;">
-		  <h3 class="w3-center"> Jean Beliveau </h3>
+		<div class="w3-card card-3 w3-padding-16">
+		  <h3 class="w3-center"> Jean Beliveau - Career </h3>
 		  <div class="container-fade">
 			<img src=".\pics\jean_beliveau.jpg" alt="Jean Beliveau" class="image-fade" style="width:100%">
 			<div class="middle-fade">
-			  <a href=".\buying_form.html"  class="text"> Buy Now </a>
+			  <a href="https://www.ebay.com"  class="text"> Buy Now </a>
 			</div>
 		  </div>
 		
-			   <h1 class="w3-center"> 899 USD</h1> 
-			   <p class="w3-center"> 50 Prints available with PSA/DNA</p>
+			   <h1 class="w3-center"> 849 USD</h1> 
+			   <p class="w3-center"> 35 Prints available with PSA/DNA</p>
+			   <a href=".\buying_form.html">
+				<button style="width: 90%; margin-left: 5%;">Number Selection</button>
+				</a>
 		
 		
 	</div>
@@ -137,20 +143,24 @@ Add nav bar to the footer ( improve footer)
 	<div class="w3-row-padding w3-center w3-margin-top"> -->
 	
 		
-		<div class="w3-card" style="max-width: 30%;">
+		<div class="w3-card card-3 w3-padding-16">
 			<h3 class="w3-center"> Jean Beliveau - Playoff </h3>
 			
 			<div class="container-fade">
 				<img src=".\pics\jean_beliveau.jpg" alt="Rocket" class="image-fade" style="width:100%">
 				<div class="middle-fade">
-				  <a href=".\buying_form.html"  class="text"> Buy Now </a>
+				  <a href="https://www.ebay.com"  class="text"> Buy Now </a>
 				</div>
 			  </div>
 			
 				   <h1 class="w3-center"> 899 USD</h1> 
-				   <p class="w3-center"> 50 Prints available with PSA/DNA</p>
+				   <p class="w3-center"> 5 Prints available with PSA/DNA</p>
+				   <a href=".\buying_form.html">
+					<button style="width: 90%; margin-left: 5%;">Number Selection</button>
+					</a>
 	  </div>
 	
+	</div>
 	</div>
 	
 <br>
@@ -161,14 +171,12 @@ Add nav bar to the footer ( improve footer)
 	<div class="w3-content">
 	  <div class="w3-twothird">
 		<h1 class="w3-border-bottom w3-border-light-grey">How to order</h1>
-		<hp class="w3-padding-32">
+		<hp class="w3-padding-32 w3-large">
 			<ol>
 				<li>Choose the Lithograph you would like to order. </li>
-				<li>Choose the Number of the lithograph you would like. ( from under the picture)</li>
-				<li>Click on the Ebay icon (This will take you to my ebay site. This allows you to have the Ebay purchase guarantee??)ll</li>
-				<li>Just fill in your lithograph and number chosen, adding the price.</li>
-				<li>Please read the shipping procedures under the shipping tab.
-					Note: if you are ordering two prints, 1 Richard and 1 Beliveau, please read the information under the Shipping tab.</li>
+				<li>Choose the Number of the lithograph you would like. (From under the picture)</li>
+				<li>Click on the buy now button (This will take you to my ebay site.)</li>
+				<li>Please read the shipping procedures under the shipping tab.</li>
 				<li>Place your order</li>
 			  </ol>
 		</hp>
