--- a/shipping.html
+++ b/shipping.html
@@ -74,12 +74,13 @@ Add nav bar to the footer ( improve footer)
 	  <div class="w3-twothird">
 		<h1>Shipping Infomation</h1>
 		<h5 class="w3-padding-32">
-			We will only ship in reinforced corrugated tube. We will NOT ship flat.
-Shipping flat only increases the chance of damage to the print. On the outside of the tube are handling and framing instructions. This also decreases the cost of shipping.
-Shipping costs: $25.00 us, anywhere in North American.
-Outside of North America: Please use the Contact Seller icon on the ebay page to receive an accurate shipping quote.
-If you are ordering two lithographs, ie. one Richard and one Beliveau they will be shipped separately to minimize any chance of damage. You will only be charged one shipping charge.
-
+			<ul>
+			<li>We will only ship in reinforced corrugated tube. We will NOT ship flat.</li>
+			<li>Shipping flat only increases the chance of damage to the print. On the outside of the tube are handling and framing instructions. This also decreases the cost of shipping.</li>
+			<li>Candian Shipping Costs: $20 - 30$ USD </li>
+			<li>American Shipping Costs: 30- 40 USD </li>
+			<li>International: Please use the Contact Seller icon on the ebay page to receive an accurate shipping quote.</li>
+			</ul>
 		</h5>
 	  </div>
   <!-- .w3-col.m5 is for spacing-->
@@ -93,6 +94,31 @@ If you are ordering two lithographs, ie. one Richard and one Beliveau they will 
 
 	
 <br>
+
+
+ <!-- Fivth Photo Grid-->
+<div class="w3-row-padding w3-padding-16 w3-center" id="Row_3">
+	<h1 class="w3-border-bottom w3-border-light-grey w3-padding-16">What will you recevice in shipping</h1>
+    <div class="w3-third">
+      <img src=".\pics\rocket.jpg" alt="Rocket sgining" style="width:90%">
+      <h3>Premium lithograph Rocket Richard or Jean Beliveau</h3>
+      <p>PSA/DNA sticker in bottom right corner</p>
+    </div>
+
+    <div class="w3-third">
+      <img src=".\pics\certificate.png" alt="Jean sgining" style="width:90%">
+      <h3>Certificate of Autenticy from Commemorative Goals</h3>
+      <p>Each Certificate is hand signed by the Owner of Commemorative Goals</p>
+	</div>
+
+	<div class="w3-third">
+		<img src=".\pics\psa_card_removed.jpg" alt="Jean sgining" style="width:90%; margin-top: 8%;">
+		<h3>PSA/DNA Certificate of Autheninicty</h3>
+		<p>Number has been removed for privacy</p>
+	  </div>
+</div>
+
+
 
 <!-- INformation Section for ordering -->
 
