--- a/buying_form.html
+++ b/buying_form.html
@@ -68,6 +68,7 @@ Add nav bar to the footer ( improve footer)
 
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
+	<h1 style="margin-top: 10%;">Fill out the form only if you are buying a print through Ebay</h1>
 
 	<div style="margin-top: 10%;">
 	<form method="POST" action="process.asp" name="form1">
@@ -78,15 +79,6 @@ Add nav bar to the footer ( improve footer)
 		<label for="lname">Last Name</label>
 		<input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-		<label for="lname">Address</label>
-		<input type="text" id="lname" name="Address" placeholder="Your last name..">
-
-		<label for="lname">Postal Code</label>
-		<input type="text" id="lname" name="postal" placeholder="Your last name..">
-
-		<label for="lname">City</label>
-		<input type="text" id="lname" name="city" placeholder="Your last name..">
-	
 		<label for="country">Country</label>
 		<select id="country" name="country">
 		  <option value="australia">International</option>
@@ -94,11 +86,28 @@ Add nav bar to the footer ( improve footer)
 		  <option value="usa">USA</option>
 		</select>
 
+		<label for="lname">City</label>
+		<input type="text" id="lname" name="city" placeholder="Your last name..">
+
+		<label for="lname">Address</label>
+		<input type="text" id="lname" name="Address" placeholder="Your last name..">
+
+		<label for="lname">Postal Code</label>
+		<input type="text" id="lname" name="postal" placeholder="Your last name..">
+
+
 		<label for="country">Print Selection</label>
 		<select id="country" name="country">
-		  <option value="australia">Maurice Richard Regular Season</option>
-		  <option value="canada">Jean Beliveau Regular Season</option>
-		  <option value="usa">Jean Beliveau Playoff</option>
+		  <option value="richard_regular">Maurice Richard Regular Season</option>
+		  <option value="beliveau_regular">Jean Beliveau Regular Season</option>
+		  <option value="beliveau_payoff">Jean Beliveau Playoff</option>
+		</select>
+
+		<label for="number">Number Selection</label>
+		<select id="country" name="country">
+		  <option value="richard_regular">404</option>
+		  <option value="beliveau_regular">405</option>
+		  <option value="beliveau_payoff">406</option>
 		</select>
 
 
