--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Add nav bar to the footer ( improve footer)
 	  <div class="w3-twothird ">
 		<h1 class="w3-border-bottom w3-border-white">PSA/DNA Certified</h1>
 		<h5 class="w3-padding-32">
-			All lithographs available for purchase have been <b>PSA Certifed</b> and come with a certifcation card, 
+			All lithographs available for purchase have been <b>PSA/DNA Certified</b> and come with a certification card, 
 			matching the PSA decal on the print. This authenticity can be confirmed by using the PSA/DNA 
 			<a href="https://www.psacard.com/cert/">Certification Verification Tool.</a>
 		</h5>
@@ -176,40 +176,40 @@ Add nav bar to the footer ( improve footer)
 
 <!-- Cards -->
 <hr></hr>
-<div class="w3-white w3-row-padding ">    
+<div class="w3-white">    
 	  <h1 class="w3-wide w3-center">Products</h1>
 	  <p class="w3-center w3-large"> <span class="w3-tag w3-light-grey"> <b> Commemorative Goals is currently offering two premium signed 
 		  lithographs, Maurice Richard and Jean Beliveau sizing for each print ( 26”x 20”) </b> </span> 
 		
 	</p>
+</div>
 
 
-	<div class="container w3-padding-64">
+		
+<div class="centered">
+	<div class="cards w3-padding-32">
 
 		<!-- Card 1 -->
+		<div class="card w3-card w3-padding-16" >
+			<h3 class="w3-center"> The Rocket Richard </h3>   
+		<a  href=".\rocket.html" style="width: 80%;">  <img class = "center img-hover" src=".\pics\rocket_arrow.jpg" style="width:90%"> </a>
 
-	<div class="w3-card container w3-padding-16" style="max-width:40%;" >
-		<h3 class="w3-center"> The Rocket Richard </h3>   
-	<a  href=".\rocket.html" style="width: 85%;">  <img class = "center img-hover" src=".\pics\rocket.jpg" style="width:100%"> </a>
-
-	</div>
-
-
-		<!-- Card 2 Jean Beliveau-->
+		</div>
 
 
-	
-	  <div class="w3-card container w3-padding-16" style="max-width: 40%;">
-	  <h3 class="w3-center"> Jean Beliveau </h3>
-	
-		 <a href=".\jean_beliveau.html" style="width: 85%;"> <img class = "center  img-hover" src=".\pics\jean_beliveau.jpg" style="width:100%"> </a>
-	  </div>
+			<!-- Card 2 Jean Beliveau-->
+
+
+		
+		<div class="card w3-card w3-padding-16" >
+		<h3 class="w3-center"> Jean Beliveau </h3>
+		
+			<a href=".\jean_beliveau.html" style="width: 80%;"> <img class = "center  img-hover" src=".\pics\jean_beliveau_arrow.jpg" style="width:90%"> </a>
+		</div>
 	  
 	</div>
-
 </div>
 
-</div>
 
 
 <!-- Footer -->
