--- a/rocket.html
+++ b/rocket.html
@@ -64,7 +64,7 @@
 <div class='w3-container'>
   <h1 class="w3-text-indigo w3-center w3-padding-64" style="margin-top: 10%;"><b>Maurice</b> <span class="w3-xxlarge w3-text-black">"The Rocket"</span> <b>Richard</b> </h1>  
 <div class="w3-content " style="height:1400px; max-width:1015px;position:relative;">
-  <img class="w3-content border " src=".\pics\rocket.jpg" usemap="#Map" style="position:absolute; width: 1000px;"/>
+  <img class="w3-content border " src=".\pics\rocket_arrow.jpg" usemap="#Map" style="position:absolute; width: 1000px;"/>
   <div class=""> 
     <map name="Map" onmouseover="hovIn()" onmouseout="hovOut()" class="debug">
       <div id="CUST_1">
@@ -128,30 +128,20 @@
       </div>
     </map>
   </div>
-  <!-- Vertical arrow-->
-<svg height="550" width="20">
-	<defs>
-		<marker id="markerArrow" markerWidth="13" markerHeight="13" refX="2" refY="6"
-			orient="auto">
-			<path d="M2,2 L2,11 L10,6 L2,2" style="fill: #000000;" />
-		</marker>
-	</defs>
-	<text x="0" y="320" style="writing-mode: tb;"> 26 Inches</text>
-	<line x1="0" y1="0" x2="0" y2="300" class="arrow" />
-	<defs>
-		<marker id="markerArrow" markerWidth="13" markerHeight="13" refX="2" refY="6"
-			orient="auto">
-			<path d="M2,2 L2,11 L10,6 L2,2" style="fill: #000000;" />
-		</marker>
-	</defs>
-	<line x1="0" y1="700" x2="0" y2="400" class="arrow" />
-	</svg>
 </div>
+<!-- INformation Section -->
 
+<div class=" w3-container">
+	<div class="w3-content">
+	  <div class="w3-center">
+    <h5 >
+       Full Lithograph size is 20x26 Inches <br> Image size is 17.75x23 Inches
+    </h5>
+	  </div>
+</div>
+</div>
   
 
-</div>
-    
 
 <!-- INformation Section -->
 
