--- a/price.html
+++ b/price.html
@@ -107,7 +107,7 @@ Add nav bar to the footer ( improve footer)
 		
 			   <h1 class="w3-center"> 899 USD</h1> 
 			   <p class="w3-center"> 40 Prints available with PSA/DNA</p>
-			   <a href=".\buying_form.html">
+			   <a href=".\contact.php">
 			   <button style="width: 90%; margin-left: 5%;">Number Selection</button>
 			   </a>
 			   
@@ -131,7 +131,7 @@ Add nav bar to the footer ( improve footer)
 		
 			   <h1 class="w3-center"> 849 USD</h1> 
 			   <p class="w3-center"> 35 Prints available with PSA/DNA</p>
-			   <a href=".\buying_form.html">
+			   <a href=".\contact.php">
 				<button style="width: 90%; margin-left: 5%;">Number Selection</button>
 				</a>
 		
@@ -155,7 +155,7 @@ Add nav bar to the footer ( improve footer)
 			
 				   <h1 class="w3-center"> 899 USD</h1> 
 				   <p class="w3-center"> 5 Prints available with PSA/DNA</p>
-				   <a href=".\buying_form.html">
+				   <a href=".\contact.php">
 					<button style="width: 90%; margin-left: 5%;">Number Selection</button>
 					</a>
 	  </div>
