--- a/shipping.html
+++ b/shipping.html
@@ -75,17 +75,18 @@ Add nav bar to the footer ( improve footer)
 		<h1>Shipping Infomation</h1>
 		<h5 class="w3-padding-32">
 			<ul>
-			<li>We will only ship in reinforced corrugated tube. We will NOT ship flat.</li>
+			<li>All shipments will have a tracking number</li>	
+			<li>We will only ship in a reinforced corrugated tube. We will NOT ship flat.</li>
 			<li>Shipping flat only increases the chance of damage to the print. On the outside of the tube are handling and framing instructions. This also decreases the cost of shipping.</li>
-			<li>Candian Shipping Costs: $20 - 30$ USD </li>
-			<li>American Shipping Costs: 30- 40 USD </li>
+			<li>Candian Shipping & Insurance Costs: $32 USD Anywhere in Canada</li>
+			<li>American Shipping & Insurance Costs: $55 USD Anywhere in USA </li>
 			<li>International: Please use the Contact Seller icon on the ebay page to receive an accurate shipping quote.</li>
 			</ul>
 		</h5>
 	  </div>
   <!-- .w3-col.m5 is for spacing-->
 		 <div class=".w3-col.m5 w3-center w3-padding-64">
-		<img src=".\pics\poster_tube.jpg" style="width:150px;height:280px;">
+		<img src=".\pics\poster_tube1.jpg" style="width:250px;height:450px;">
 	  </div>
 	</div>
   </div>
@@ -107,13 +108,13 @@ Add nav bar to the footer ( improve footer)
 
     <div class="w3-third">
       <img src=".\pics\certificate.png" alt="Jean sgining" style="width:90%">
-      <h3>Certificate of Autenticy from Commemorative Goals</h3>
+      <h3>Certificate of Authenticity from Commemorative Goals</h3>
       <p>Each Certificate is hand signed by the Owner of Commemorative Goals</p>
 	</div>
 
 	<div class="w3-third">
 		<img src=".\pics\psa_card_removed.jpg" alt="Jean sgining" style="width:90%; margin-top: 8%;">
-		<h3>PSA/DNA Certificate of Autheninicty</h3>
+		<h3>PSA/DNA Certificate of Authenticity</h3>
 		<p>Number has been removed for privacy</p>
 	  </div>
 </div>
@@ -125,16 +126,16 @@ Add nav bar to the footer ( improve footer)
 <div class="w3-row-padding w3-padding-64 w3-container">
 	<div class="w3-content">
 	  <div class="w3-twothird">
-		<h1 class="w3-border-bottom w3-border-light-grey">How to order</h1>
+		<h1 class="w3-border-bottom w3-border-light-grey">Framing Instructions</h1>
 		<hp class="w3-padding-32">
 			<ol>
-				<li>Choose the Lithograph you would like to order. </li>
-				<li>Choose the Number of the lithograph you would like. ( from under the picture)</li>
-				<li>Click on the Ebay icon (This will take you to my ebay site. This allows you to have the Ebay purchase guarantee??)ll</li>
-				<li>Just fill in your lithograph and number chosen, adding the price.</li>
-				<li>Please read the shipping procedures under the shipping tab.
-					Note: if you are ordering two prints, 1 Richard and 1 Beliveau, please read the information under the Shipping tab.</li>
-				<li>Place your order</li>
+				<li>If print is to be framed - Deliver un-opened tube directly to framer.</li>
+				<li>Most print damage is due to careless removal, opening and unrolling.</li>
+				<li>Wash hands before removal of print from shipping tube.</li>
+				<li>Carefully grasp inner packing paper, pull gently upward with a roationg motion.</li>
+				<li>Allow print to "relax" for a few hours before unrolling.</li>
+				<li>Place relaxed print between two clean sheets of paper (included) and top with weights to flatten completely.</li>
+				<li>Please go to update page for suggestions regrading framing.	</li>
 			  </ol>
 		</hp>
 	  </div>
