--- a/jean_beliveau.html
+++ b/jean_beliveau.html
@@ -129,7 +129,7 @@
 	<div class="w3-content">
 	  <div class="w3-center">
     <h5 >
-       Full Lithograph size is 20x26 Inches <br> Image size is 17.75x23 Inches
+       Full Lithograph size is 20 x 26 Inches <br> Image size is 17.75 x 23 Inches
     </h5>
 	  </div>
 </div>
@@ -157,7 +157,7 @@
   <!-- .w3-col.m5 is for spacing-->
     <div class=".w3-col.m5 w3-center w3-padding-64" >
       <img src=".\pics\jean_signing.jpg" alt="Beliveau sgining" style="width:400px;height:300px;">
-      <p class=".w3-col.m5">Mr. Beliveau signing the litographs.</p>
+      <p class=".w3-col.m5">Mr. Beliveau signing the original art.</p>
     </div>
   
 
