--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -61,6 +61,7 @@
 <!-- Photo Grid (maybe instead of slideshow) -->
 <div class="w3-center  w3-padding-16" style="margin-top: 10%;">
 <h1> <u>Photo Gallery</u> </h1>
+<h3 style="font-size:1.5vw;"> <b> <i>The ultimate edition for the ultimate fan</i></b> </h3>
 </div>
 
 
@@ -80,11 +81,9 @@
       <h3>Maurice Richard</h3>
     
     </div>
-    <p class=" w3-center center w3-justify">Each fine art print is produced on museum quality, acid free paper, 
-      ensuring the highest standard of original art reproduction. 
-      This guarantees each limited edition lithograph will bring great pleasure to the collector and increased value for the investor.
-    </p>
+   
 </div>
+<div class="w3-center"><h1>The perfect gift for that special person in your life <br> "Birthday" or "Fathers Day" <br> "Christmas or "Retirement Gift"</h1></div>
 
 <hr></hr>
 <!-- Second Photo Grid-->
@@ -145,7 +144,7 @@
     <div class="w3-half">
       <img src=".\pics\psa_card_removed.jpg" alt="Rocket sgining" style="width:100%">
       <h3>PSA/DNA certificate of authenticity</h3>
-      <p>PSA/DNA is the leader in third party signature authentication </p>
+      <p>Certificate number has been removed for privacy</p>
     </div>
 
     <div class="w3-half">
@@ -188,7 +187,12 @@
     <h3>Maurice Richard Lithograph Bottom</h3>
     <p>Career goal numbering</p>
   </div>
-
+  <p class="  w3-justify">
+    Each fine art print is produced on museum quality, acid free paper, 
+    ensuring the highest standard of original art reproduction. 
+    This guarantees each limited edition lithograph will bring great pleasure to the collector and increased value for the investor.
+  </p>
+  
 </div>
 
 
