--- a/updates.html
+++ b/updates.html
@@ -64,19 +64,70 @@ Add nav bar to the footer ( improve footer)
 	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
 	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
 </div>
+
+
 <!-- Page content -->
-<div class="w3-content w3-padding" style="max-width:1564px">
+<div class="w3-content">
 
-<!-- INformation Section -->
-<div class="w3-row-padding w3-padding-64 w3-container">
-	<div class="w3-container">
+	<!-- INformation Section -->
 
-		<h1>Coming Soon </h1>
-		
+<div class="w3-row-padding w3-padding-32 w3-container">
+	<div class="w3-content">
+	  <div class="w3-twothird">
+		<h1 class="w3-border-bottom w3-border-light-grey">Updates</h1>
+		<h5 class="w3-padding-32">
+			In this inaugral edition of lithographs, we are offering 80 prints signed and PSA/DNA authenticated by PSA. 
+		</h5>
 	  </div>
+  <!-- .w3-col.m5 is for spacing-->
+		 <div class=".w3-col.m5 w3-center w3-padding-32" >
+		<img src=".\pics\jean_beliveau.jpg" style="width:250px;height:312px;">
 	  </div>
+	</div>
+  </div>
+
+</div>
 
 
+	<!-- INformation Section on number on signed prints  -->
+
+	<div class="w3-row-padding w3-padding-32 w3-container w3-light-grey">
+		<div class="w3-content">
+		  <div class="w3-twothird">
+			<h1 class="w3-border-bottom w3-border-white">HAND SIGNED LITHOGRAPHS</h1>
+			<h5 class="w3-padding-32">
+				Each year we will be adding more prints avialvle with PSA/DNA autentication
+			</h5>
+		  </div>
+	  <!-- .w3-col.m5 is for spacing-->
+			 <div class=".w3-col.m5 w3-center w3-padding-32" >
+			<img src=".\pics\rocket_signing.jpeg" style="width:320px;height:200px;">
+		  </div>
+		</div>
+	  </div>
+	
+	</div>
+
+		<!-- INformation Section -->
+
+<div class="w3-row-padding w3-padding-32 w3-container">
+	<div class="w3-content">
+	  <div class="w3-twothird">
+		<h1 class="w3-border-bottom w3-border-light-grey">Updates</h1>
+		<h5 class="w3-padding-32">
+			Look for an outstanding imaige of the bluenose I that will be ready for sale in the summer of 2021 
+		</h5>
+	  </div>
+  <!-- .w3-col.m5 is for spacing-->
+		 <div class=".w3-col.m5 w3-center w3-padding-32" >
+		<img src=".\pics\jean_beliveau.jpg" style="width:250px;height:312px;">
+	  </div>
+	</div>
+  </div>
+
+</div>
+
+<p>Thank you for visting</p>
 
   
 
@@ -89,7 +140,7 @@ Add nav bar to the footer ( improve footer)
 			
 			  <div class="w3-left w3-hide-small">
 				<a href="#about" class="w3-bar-item-foot w3-button ">Pricing</a>  
-				<a href="#about" class="w3-bar-item-foot w3-button ">Return Policy</a>
+				<a href="#about" class="w3-bar-item-foot w3-button ">FAQ</a>
 				<a href="#about" class="w3-bar-item-foot w3-button ">Contact Us</a>
 	
 		</div>
