--- a/contact_me.html
+++ b/contact_me.html
@@ -5,7 +5,7 @@ Add nav bar to the footer ( improve footer)
 -->
 
 <html>
-<title>Goals - Shipping</title> <!-- title, displayed in tab-->
+<title>Goals - Premium Incentive</title> <!-- title, displayed in tab-->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -45,7 +45,7 @@ Add nav bar to the footer ( improve footer)
     <a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
 		<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
 		<a href=".\shipping.html" class="w3-bar-item w3-button  ">Shipping</a>
-		<a href=".\premium.html" class="w3-bar-item w3-button ">Premium Incentive</a>
+		<a href=".\premium.html" class="w3-bar-item w3-button ">Corporate Clients</a>
 		<a href=".\updates.html" class=" w3-button w3-bar-item " >Updates</a>
 
 	  </div>
@@ -61,104 +61,50 @@ Add nav bar to the footer ( improve footer)
 	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button  ">Jean Beliveau</a>
 	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
 	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
-	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
+	<a href=".\premium.html" class="w3-bar-item w3-button">Corporate Clients</a>
 	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
 </div>
 
-<!-- Page content -->
-<div class="w3-content w3-padding" style="max-width:1564px">
 
-<!-- INformation Section -->
-<div class="w3-row-padding w3-padding-64 w3-container">
-	<div class="w3-container">
+<!-- Page content -->
+<div class="w3-content">
+
+	<!-- INformation Section -->
+
+<div class="w3-row-padding w3-padding-32 w3-container" style="margin-top: 10%;">
+	<div class="w3-content">
 	  <div class="w3-twothird">
-		<h1>Shipping Infomation</h1>
+		<h1 class="w3-border-bottom w3-border-light-grey">Contact Us</h1>
 		<h5 class="w3-padding-32">
-			<ul>
-			<li>All shipments will have a tracking number</li>	
-			<li>We will only ship in a reinforced corrugated tube. We will NOT ship flat.</li>
-			<li>Shipping flat only increases the chance of damage to the print and substantiality increases the cost of shipping. On the outside of the tube are handling and framing instructions.</li>
-			<li>Candian Shipping & Insurance Costs: $32 USD Anywhere in Canada</li>
-			<li>American Shipping & Insurance Costs: $55 USD Anywhere in USA </li>
-			<li>International: Please use the Contact Seller icon on the ebay page to receive an accurate shipping quote. 
-				<a href=".\contact_me.html">
-				<button >Contact</button>
-				</a> 
-			</li>
-			</ul>
+			 commemorative.goals@gmail.com
 		</h5>
 	  </div>
   <!-- .w3-col.m5 is for spacing-->
-		 <div class=".w3-col.m5 w3-center w3-padding-64">
-		<img src=".\pics\poster_tube1.jpg" style="width:250px;height:450px;">
+		 <div class=".w3-col.m5 w3-center w3-padding-32" >
+		<img src=".\pics\jean_beliveau.jpg" style="width:250px;height:312px;">
 	  </div>
 	</div>
   </div>
+</div>
+
+
+
+	
+
 
   
 
-	
-<br>
-
-
- <!-- Fivth Photo Grid-->
-<div class="w3-row-padding w3-padding-16 w3-center" id="Row_3">
-	<h1 class="w3-border-bottom w3-border-light-grey w3-padding-16">What you will recevice in shipping.</h1>
-    <div class="w3-third">
-      <img src=".\pics\rocket.jpg" alt="Rocket sgining" style="width:90%">
-      <h3>Premium lithograph Rocket Richard or Jean Beliveau</h3>
-      <p>PSA/DNA sticker in bottom right corner</p>
-    </div>
-
-    <div class="w3-third">
-      <img src=".\pics\certificate.png" alt="Jean sgining" style="width:90%">
-      <h3>Certificate of Authenticity from Commemorative Goals</h3>
-      <p>Each Certificate is hand signed by the Owner of Commemorative Goals</p>
-	</div>
-
-	<div class="w3-third">
-		<img src=".\pics\psa_card_removed.jpg" alt="Jean sgining" style="width:90%; margin-top: 8%;">
-		<h3>PSA/DNA Certificate of Authenticity</h3>
-		<p>Number has been removed for privacy</p>
-	  </div>
-</div>
-
-
-
-<!-- INformation Section for ordering -->
-
-<div class="w3-row-padding w3-padding-64 w3-container">
-	<div class="w3-content">
-	  <div class="w3-twothird">
-		<h1 class="w3-border-bottom w3-border-light-grey">Framing Instructions</h1>
-		<hp class="w3-padding-32">
-			<ol>
-				<li>If print is to be framed - Deliver un-opened tube directly to framer.</li>
-				<li>Most print damage is due to careless removal, opening and unrolling.</li>
-				<li>Wash hands before removal of print from shipping tube.</li>
-				<li>Carefully grasp inner packing paper, pull gently upward with a roationg motion.</li>
-				<li>Allow print to "relax" for a few hours before unrolling.</li>
-				<li>Place relaxed print between two clean sheets of paper (included) and top with weights to flatten completely.</li>
-				<li>Please go to update page for suggestions regarding framing.	</li>
-			  </ol>
-		</hp>
-	  </div>
- 
-	</div>
-  </div>
-
-</div>
 
 <!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16">
+<footer class="w3-container w3-black w3-padding-16" style="position: absolute; bottom: 0; width: 100%;">
 	
 	<div class = "w3-container">
 		<div class="w3-bar w3-black w3-wide w3-padding-16 w3-card">
 			
 			  <div class="w3-left w3-hide-small">
-				<a href="#about" class="w3-bar-item-foot w3-button ">Pricing</a>  
-				<a href="#about" class="w3-bar-item-foot w3-button ">FAQ</a>
-				<a href="#about" class="w3-bar-item-foot w3-button ">Contact Us</a>
+				<a href=".\price.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
+				<a href="#.\faq.html" class="w3-bar-item-foot w3-button ">FAQ</a>
+				<a href="#.\contact_me.html" class="w3-bar-item-foot w3-button ">Contact Us</a>
 	
 		</div>
 	</div>	
