--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Add nav bar to the footer ( improve footer)
     <a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
 		<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
 		<a href=".\shipping.html" class="w3-bar-item w3-button  ">Shipping</a>
-		<a href=".\premium.html" class="w3-bar-item w3-button ">Premium Incentive</a>
+		<a href=".\premium.html" class="w3-bar-item w3-button ">Corporate Clients</a>
 		<a href=".\updates.html" class=" w3-button w3-bar-item " >Updates</a>
 
 	  </div>
@@ -69,7 +69,7 @@ Add nav bar to the footer ( improve footer)
 	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button  ">Jean Beliveau</a>
 	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
 	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
-	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
+	<a href=".\premium.html" class="w3-bar-item w3-button">Corporate Clients</a>
 	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
 </div>
 
@@ -178,8 +178,8 @@ Add nav bar to the footer ( improve footer)
 <hr></hr>
 <div class="w3-white">    
 	  <h1 class="w3-wide w3-center">Products</h1>
-	  <p class="w3-center w3-large"> <span class="w3-tag w3-light-grey"> <b> Commemorative Goals is currently offering two premium signed 
-		  lithographs, Maurice Richard and Jean Beliveau sizing for each print ( 26”x 20”) </b> </span> 
+	  <p class="w3-center w3-large">  <b> Commemorative Goals is currently offering two premium signed 
+		  lithographs, Maurice Richard and Jean Beliveau. <br> Print size is ( 26”x 20”) </b> 
 		
 	</p>
 </div>
@@ -191,7 +191,7 @@ Add nav bar to the footer ( improve footer)
 
 		<!-- Card 1 -->
 		<div class="card w3-card w3-padding-16" >
-			<h3 class="w3-center"> The Rocket Richard </h3>   
+			<h3 class="w3-center"> Maurice Richard </h3>   
 		<a  href=".\rocket.html" style="width: 80%;">  <img class = "center img-hover" src=".\pics\rocket_arrow.jpg" style="width:90%"> </a>
 
 		</div>
@@ -219,7 +219,7 @@ Add nav bar to the footer ( improve footer)
 			<div class="w3-bar w3-black w3-wide w3-padding-16 w3-card">
 				
 				  <div class="w3-left w3-hide-small">
-					<a href="#about" class="w3-bar-item-foot w3-button ">Pricing</a>  
+					<a href=".\price.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
 					<a href="#about" class="w3-bar-item-foot w3-button ">FAQ</a>
 					<a href="#about" class="w3-bar-item-foot w3-button ">Contact Us</a>
 		
