--- a/price.html
+++ b/price.html
@@ -97,7 +97,7 @@ Add nav bar to the footer ( improve footer)
 
 		
 	<div class="w3-card card-3 w3-padding-16">
-		<h3 class="w3-center"> The Rocket Richard - Career </h3>   
+		<h3 class="w3-center"> Maurice Richard - Career </h3>   
 		<div class="container-fade">
 			<img src=".\pics\rocket.jpg" alt="Rocket" class="image-fade" style="width:100%">
 			<div class="middle-fade">
@@ -105,9 +105,9 @@ Add nav bar to the footer ( improve footer)
 			</div>
 		</div>	
 		
-			   <h1 class="w3-center"> 899 USD</h1> 
+			   <h1 class="w3-center"> $899 USD</h1> 
 			   <p class="w3-center"> 40 Prints available with PSA/DNA</p>
-			   <a href=".\contact.php">
+			   <a href=".\number_form.php">
 			   <button style="width: 90%; margin-left: 5%;">Number Selection</button>
 			   </a>
 			   
@@ -129,9 +129,9 @@ Add nav bar to the footer ( improve footer)
 			</div>
 		  </div>
 		
-			   <h1 class="w3-center"> 849 USD</h1> 
+			   <h1 class="w3-center"> $849 USD</h1> 
 			   <p class="w3-center"> 35 Prints available with PSA/DNA</p>
-			   <a href=".\contact.php">
+			   <a href=".\number_form.php">
 				<button style="width: 90%; margin-left: 5%;">Number Selection</button>
 				</a>
 		
@@ -153,9 +153,9 @@ Add nav bar to the footer ( improve footer)
 				</div>
 			  </div>
 			
-				   <h1 class="w3-center"> 899 USD</h1> 
+				   <h1 class="w3-center"> $899 USD</h1> 
 				   <p class="w3-center"> 5 Prints available with PSA/DNA</p>
-				   <a href=".\contact.php">
+				   <a href=".\number_form.php">
 					<button style="width: 90%; margin-left: 5%;">Number Selection</button>
 					</a>
 	  </div>
