--- a/rocket.html
+++ b/rocket.html
@@ -135,7 +135,7 @@
 	<div class="w3-content">
 	  <div class="w3-center">
     <h5 >
-       Full Lithograph size is 20x26 Inches <br> Image size is 17.75x23 Inches
+       Full Lithograph size is 20 x 26 Inches <br> Image size is 17.75 x 23 Inches
     </h5>
 	  </div>
 </div>
@@ -165,7 +165,7 @@
   <!-- .w3-col.m5 is for spacing-->
     <div class=".w3-col.m5 w3-center w3-padding-64" >
       <img src=".\pics\rocket_signing2.jpeg" alt="Rocket sgining" style="width:400px;height:300px;">
-      <p class=".w3-col.m5">Mr. Richard signing the litographs.</p>
+      <p class=".w3-col.m5">Mr. Richard signing the lithographs.</p>
     </div>
   
 
